plugins {
    alias(libs.plugins.android.library)
    alias(libs.plugins.kotlin.android)
    alias(libs.plugins.ksp)
    alias(libs.plugins.google.hilt.android)
}

android {
    namespace = 'io.coderf.arklab.common'
    compileSdk = libs.versions.compileSdkVersion.get().toInteger()
    defaultConfig {
        minSdk = libs.versions.minSdkVersion.get().toInteger()
        targetSdk = libs.versions.targetSdkVersion.get().toInteger()
        testInstrumentationRunner = "androidx.test.runner.AndroidJUnitRunner"
        multiDexEnabled = true
        ndk {
            //armeabi-v7a 较旧的 Android 设备（大约 2016年前），逐渐淘汰，32位架构
            //armeabi-v8a 绝大多数现代 Android 手机和平板,主流和未来,64位架构
            //x86 旧的 Android 模拟器和极少数平板，基本淘汰，32位架构
            //x86_64 少数 Android 平板、Chromebook 和模拟器，小众但重要，64位架构
            abiFilters = ['armeabi-v7a', 'armeabi-v8a', 'x86', 'x86_64']
//            abiFilters 'armeabi', 'armeabi-v7a', 'armeabi-v8a',
//                    'x86', 'x86_64', 'mips', 'mips64'
        }
    }

    buildTypes {
        release {
            resValue("string", "app_config_file", "prod.properties" )
            buildConfigField("boolean", "LOG_DEBUG", "false")// 不显示log
            minifyEnabled = false// 混淆
            proguardFiles(getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro')
            //新版混淆添加以下代码：，如果只添加上面会导致混淆规则一直无效；
            consumerProguardFiles('consumer-rules.pro')
        }
        debug {
            resValue("string", "app_config_file", "dev.properties")
            buildConfigField("boolean", "LOG_DEBUG", "true")// 显示log
            minifyEnabled = false// 混淆
            proguardFiles(getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro')
        }
    }
    compileOptions {
        encoding = "UTF-8"
        targetCompatibility = JavaVersion.VERSION_17
        sourceCompatibility = JavaVersion.VERSION_17
    }
    lint {
        baseline = file("lint-baseline.xml")
    }
    ksp {
        arg("room.schemaLocation", "$projectDir/schemas")
    }

    kotlin {
        jvmToolchain(17)  // 这是 kotlin DSL 的写法
    }

    java {
        toolchain {
            languageVersion.set(JavaLanguageVersion.of(17))
        }
    }

    buildFeatures {
        //noinspection DataBindingWithoutKapt
        dataBinding = true
        buildConfig = true
    }
    sourceSets {
        main {
            java.srcDirs = ['src/main/java']
            res.srcDirs = ['src/main/res']
            assets.srcDirs = ['src/main/assets']
        }
    }
}

dependencies {
    implementation fileTree(include: ['*.jar'], dir: 'libs')
    implementation platform(libs.kotlin.bom)
    implementation libs.activity
    implementation libs.androidx.core.ktx
    implementation libs.lifecycle.runtime.ktx
    implementation libs.androidx.appcompat
    implementation libs.viewpager2
    implementation libs.material
    implementation libs.graphics
    implementation libs.net.res
    implementation libs.net.ui
    implementation libs.constraintlayout
    implementation libs.logger
    implementation libs.androidx.recyclerview
    implementation libs.gson
    implementation libs.github.glide
    implementation libs.okhttp
    implementation libs.retrofit
    implementation libs.reactivex.rxandroid
    implementation libs.rxjava3.rxjava
    //ConverterFactory的String依赖包
    implementation libs.retrofit2.converter.scalars
    //ConverterFactory的Gson依赖包
    implementation libs.retrofit2.converter.gson
    //CallAdapterFactory的Rx依赖包
    implementation libs.retrofit2.adapter.rxjava3
    //SmartRefreshLayout集成
    implementation libs.scwang90.refresh.layout.kernel
    implementation libs.refresh.header.classics
    implementation libs.refresh.footer.classics

    implementation libs.androidx.lifecycle.lifecycle.livedata.ktx
    implementation libs.androidx.lifecycle.viewmodel.ktx
    implementation libs.androidx.lifecycle.common.java8
    //放着没有及时回收造成RxJava内存泄漏
    implementation libs.com.trello.rxlifecycle2.rxlifecycle.components
    // GSYVideoPlayer 13.x：java 层 + 分架构 ijk so（勿与 gsyvideoplayer 完整包同用，会重复 libijkffmpeg.so）
    implementation libs.gsyvideoplayer.java
    implementation libs.gsyvideoplayer.arm64
    implementation libs.gsyvideoplayer.armv7a
    implementation libs.github.gsyvideoplayer.x86
    implementation libs.github.gsyvideoplayer.x64
    implementation libs.mmkv
    //MinIO只有Java版本不兼容Android，因此使用这两个包代替
    implementation libs.amazonaws.aws.android.sdk.s3
    implementation libs.amazonaws.aws.android.sdk.mobile.client

    implementation libs.androidx.navigation.fragment
    implementation libs.androidx.navigation.ui
    implementation libs.androidx.navigation.ui.ktx
    //每个用到的模块都要加这两个，不能使用api
    implementation libs.google.hilt.android
    ksp libs.google.hilt.android.compiler

    implementation libs.zxing.core
    //noinspection GradleDependency
    implementation libs.zxing.android.embedded
    //paging3
    implementation libs.androidx.paging.runtime
    // 用于测试
    testImplementation libs.androidx.paging.common
// [可选] RxJava 支持
    implementation libs.paging.rxjava3
    implementation libs.androidx.paging.runtime.ktx
    implementation libs.kotlinx.coroutines.core

    //下拉刷新
    implementation libs.swiperefreshlayout

    implementation libs.androidx.room.ktx
    implementation libs.androidx.room.runtime
    ksp libs.room.compiler
    ksp project(':room-processor')
    // optional - RxJava3 support for Room
    implementation libs.room.rxjava3
    // optional - Paging 3 Integration
    implementation libs.room.paging

    implementation libs.bouncycastle.bcprov
    implementation libs.androidx.webkit
    //camera
    implementation(libs.camera.core)
    implementation(libs.camera.camera2)
    implementation(libs.camera.lifecycle)
    implementation(libs.camera.video)
    implementation(libs.camera.view)
    implementation(libs.camera.extensions)
}

apply plugin: 'maven-publish'

// 任务注册：生成源代码 JAR
tasks.register('androidSourcesJar', Jar) {
    archiveClassifier.set("sources") // 设置 classifier 为 'sources'
    from android.sourceSets.main.java.srcDirs
}

artifacts {
    archives androidSourcesJar // 将源码 JAR 添加到 artifacts
}

afterEvaluate {
    publishing {
        publications {
            plugin(MavenPublication) {
                // 发布源码 JAR，确保 classifier 为 'sources'，并且 extension 为 'jar'
                artifact(androidSourcesJar)
                artifact("$buildDir/outputs/aar/${artifactId}-release.aar")
                groupId = 'io.coderf.arklab.common'
                artifactId = 'common'
                version = '4.4.3'
            }
        }

        // 配置发布仓库
        repositories {
            maven {
                url = 'https://packages.aliyun.com/maven/repository/2405978-release-ObRSGq/'
                credentials {
                    username = System.getenv("ALIYUN_USER_NAME")
                    password = System.getenv("ALIYUN_PASSWORD")
                }
            }
            maven {
                url = 'https://packages.aliyun.com/maven/repository/2405978-snapshot-rT6GM2/'
                credentials {
                    username = System.getenv("ALIYUN_USER_NAME")
                    password = System.getenv("ALIYUN_PASSWORD")
                }
            }
        }
    }
}

